# goScore

./: .gitignore  build.sh  entrypoint.sh  server.Dockerfile  server.py  sgf2gtp9.py  sources.list  test.sgf
app/: nginx.conf  server.py  sgf2gtp.py  sgf2gtp13.py  sgf2gtp9.py  test.gtp  uwsgi.ini
goboard/: CMakeLists.txt  board.cpp  board.h  boardhistory.cpp  boardhistory.h  main.cpp  rules.cpp  rules.h  sgf.cpp  sgf.h
goboard/utils/: bsearch.cpp  global.cpp  hash.cpp  hash.h  md5.cpp  rand.cpp  rand.h  rand_helpers.cpp  sha2.cpp  test.cpp  test.h  timer.cpp  timer.h
